...
                    style: TextStyle(
                        fontFamily: 'Montserrat',
                        color: greyBlue,
                        fontSize: 18,
                        
                        letterSpacing: 1),
                    key: Key('amountTitle-text'),
                  ),
                ),
                //number textfield
                TextField(
                    controller: _text,
                    key: Key("cups-textfield"),
                    keyboardType: TextInputType.numberWithOptions(
                        decimal: true, signed: false),
                    inputFormatters: [
                      WhitelistingTextInputFormatter.digitsOnly,
                      BlacklistingTextInputFormatter.singleLineFormatter
                    ],
...
